dependency on ~>3.1.0 added becuase of a spree migration that comes with it that renamestable involved in this gem

--- a/app/views/spree/admin/product_imports/index.html.erb
+++ b/app/views/spree/admin/product_imports/index.html.erb
@@ -1,4 +1,4 @@
-<section id="product-imports-main">
+<section id="product-imports-intro">
   <h1>Product Data Import Main Page</h1>
 
   <div class="intro">
