Count of Products is Accurate

--- a/app/views/spree/admin/product_imports/index.html.erb
+++ b/app/views/spree/admin/product_imports/index.html.erb
@@ -18,7 +18,7 @@
             </h1>
           </div>
           <div class="panel-body">
-            <%= link_to "Verify #{Spree::Variant.count} Variants of #{Spree::Variant.count} Products Here", admin_products_path %>
+            <%= link_to "Verify #{Spree::Variant.count} Variants of #{Spree::Product.count} Products Here", admin_products_path %>
             <br />
             <br />
             <%= link_to "Verify Option Types", admin_option_types_path %>
