image import form added

--- a/app/views/spree/admin/product_imports/sample_import.html.erb
+++ b/app/views/spree/admin/product_imports/sample_import.html.erb
@@ -95,6 +95,8 @@
     
     <%= render partial: "clear_product_data" unless Rails.env.production? %>
     
+    <%= render partial: "image_import_form" %>
+    
 </section>
 <br/>
 <br/>
